--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,9 @@ h3 {
 
 img, video {
     border:5px solid lavender;
-    padding: 10px;
-    margin: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    max-width: 500%;
 }  
 
 /* PETS */
@@ -186,8 +187,14 @@ img, video {
 .recipe_add {
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
-    gap: 5px;
     width: 100%;
+    gap: 5px;
+}
+.recipe_add img {
+    width: 75%; 
+    height: auto; 
+    display: block; 
+    border-radius: 10px;
 }
 
 /* TRAVEL */
@@ -219,9 +226,9 @@ img, video {
 }
 
 .travel_gallery {
-    display: flex;
+    display: grid;
     justify-content: center;
-    flex-wrap: wrap; 
+
     
 }
 
