--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,11 @@ img, video {
     nav a {
         font-size: 24px;
     }
+    img:hover {
+        transform: scale(1.10); 
+        transition: transform 0.3s ease; 
+        z-index: 10; 
+    }
     .pet_description p:hover {
         box-shadow: 0 10px 20px rgba(0,0,0,0.3);
         transition: box-shadow 0.3s ease-in-out;
@@ -282,8 +287,8 @@ img, video {
     
     .pet_gallery {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Create a responsive grid layout */
-        gap: 10px; /* Add some space between items */
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); 
+        gap: 10px; 
     }
     @keyframes slideInCenterOut {
         0% {
